[package]
name = "tglaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
http = "0.2.9"
tokio = {version = "1.30.0", features = ["full"]}
serde_json = "1.0.104"
scraper = "0.17.1"
jsonpath = "0.1.1"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.9.3"

